# gpu_image_processing

./: .gitignore  CMakeLists.txt  README.md  start_servers.py  start_servers.sh  stop_servers.sh
backend/: .gitignore  app.py  requirements.txt  setup.py  setup_venv.sh  test_client.py
backend/cuda_bindings/: CMakeLists.txt  bindings.cpp
backend/profiling/: __init__.py  ncu_profiler.py
cuda_lib/: CMakeLists.txt
cuda_lib/include/: image_filters.h
cuda_lib/src/: image_filters.cu
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js
tests/: test_box_blur.cu  test_comparison.cu  test_gaussian_blur.cu  test_real_image.cu
